Fix wrapping affecting Safari, different rule on mobiles

--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -20,8 +20,10 @@ $bottom-space: 4%;
 		@include grid($flex-wrap: wrap, $gutter: $sides-gutter);
 	}
 	&--flex {
-		// @include grid($flex-wrap: flex, $gutter: $sides-gutter);
-		@include grid($flex-wrap: wrap, $gutter: $sides-gutter);
+		@include grid($flex-wrap: flex, $gutter: $sides-gutter);
+		@include medium-and-down {
+			@include grid($flex-wrap: wrap, $gutter: $sides-gutter);
+		}
 	}
 	&--vertical-center {
 		align-items: center;
@@ -86,7 +88,7 @@ $bottom-space: 4%;
 			@include grid-col($col: 4, $gutter: $sides-gutter);
 		}
 		.grid-col--sm-right {
-			order: 10; // The container needs to have the class grid-row--flex
+			order: 10;
 		}
 		.grid-col--sm-separator {
 			border: none;
@@ -114,7 +116,7 @@ $bottom-space: 4%;
 			@include grid-col($col: 4, $gutter: $sides-gutter);
 		}
 		.grid-col--md-right {
-			order: 10; // The container needs to have the class grid-row--flex
+			order: 10;
 		}
 		.grid-col--md-separator {
 			border: none;
@@ -141,7 +143,7 @@ $bottom-space: 4%;
 			@include grid-col($col: 4, $gutter: $sides-gutter);
 		}
 		.grid-col--lg-right {
-			order: 10; // The container needs to have the class grid-row--flex
+			order: 10;
 		}
 	}
 }
